fixed button jump

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -83,13 +83,6 @@ $box-border-color: $panel-colour;
 
   .delete-button {
     margin-top: 1em;
-    display: inline-block;
-
-    @include media(desktop) {
-      margin-top: 0;
-      position: relative;
-      top: 1em;
-    }
   }
 
   &.box-interested,
